force-app/main/default/objects/Reimbursement_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula
  >Grant__r.Account_Address__c + &apos;, &apos; + Grant__r.Account_City_State_Zip__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>