force-app/main/default/objects/Reimbursement_Request__c/fields/Approved_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Approved_Expenses__c</fullName>
    <inlineHelpText
  >Roll-Up Summary for Reimbursement Items: Approved Amount where Record Type = Expense</inlineHelpText>
    <label>Approved Expenses</label>
    <summarizedField>Reimbursement_Item__c.Approved_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Reimbursement_Item__c.Reimbursement_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>