force-app/main/default/objects/Reimbursement_Request__c/fields/Approved_Not_Equal_To_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Not_Equal_To_Requested_Amount__c</fullName>
    <formula>Total_Requested__c != Total_Approved_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Not Equal To Requested Amount</label>
    <type>Checkbox</type>
</CustomField>