force-app/main/default/objects/Reimbursement_Request__c/fields/Approved_Salary__c.field-meta.xml
<CustomField>
    <fullName>Approved_Salary__c</fullName>
    <inlineHelpText
  >Roll-Up Summary for Reimbursement Items: Approved Salary where Record Type = Labor</inlineHelpText>
    <label>Approved Salary</label>
    <summarizedField>Reimbursement_Item__c.Approved_Salary__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Labor</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Reimbursement_Item__c.Reimbursement_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>