force-app/main/default/objects/Reimbursement_Request__c/fields/Benefits_Balance__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Balance__c</fullName>
    <formula>Grant__r.Benefits_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grant: Benefits Balance</inlineHelpText>
    <label>Benefits Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>