force-app/main/default/objects/Reimbursement_Request__c/fields/Budgeted_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Expenses__c</fullName>
    <formula>Grant__r.Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>