force-app/main/default/objects/Reimbursement_Request__c/fields/Budgeted_Fringe__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Fringe__c</fullName>
    <formula>Grant__r.Total_Fringe_Benefits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Fringe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>