force-app/main/default/objects/Reimbursement_Request__c/fields/Budgeted_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Personnel__c</fullName>
    <formula>Grant__r.Total_Wages_Budgeted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Personnel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>