force-app/main/default/objects/Reimbursement_Request__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reimbursement Requests (CEO)</relationshipLabel>
    <relationshipName>Reimbursement_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>