force-app/main/default/objects/Reimbursement_Request__c/fields/Current_Chapter__c.field-meta.xml
<CustomField>
    <fullName>Current_Chapter__c</fullName>
    <label>Current Chapter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>