force-app/main/default/objects/Reimbursement_Request__c/fields/Currently_Running_Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Currently_Running_Curriculum__c</fullName>
    <label>Currently Running Curriculum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>