force-app/main/default/objects/Reimbursement_Request__c/fields/Days_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Process__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Status__c , &apos;Approved&apos;),
ISPICKVAL(Status__c , &apos;Paid&apos;),
ISPICKVAL(Status__c , &apos;Closed&apos;)
),
Level_Three_Approved_Date__c - Request_Date__c,
TODAY()- Request_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>