force-app/main/default/objects/Reimbursement_Request__c/fields/Drawdown_Status__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Status__c</fullName>
    <label>Drawdown Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Report</fullName>
            </value>
            <value>
                <fullName>Drawndown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>