force-app/main/default/objects/Reimbursement_Request__c/fields/Drawndown_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawndown_Date__c</fullName>
    <label>Drawndown Date</label>
    <type>Date</type>
</CustomField>