force-app/main/default/objects/Reimbursement_Request__c/fields/Expense_Balance__c.field-meta.xml
<CustomField>
    <fullName>Expense_Balance__c</fullName>
    <formula>Grant__r.Expense_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grant: Expense Balance</inlineHelpText>
    <label>Expense Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>