force-app/main/default/objects/Reimbursement_Request__c/fields/Expense_Notes__c.field-meta.xml
<CustomField>
    <fullName>Expense_Notes__c</fullName>
    <label>Expense Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>