force-app/main/default/objects/Reimbursement_Request__c/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <label>FTE</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>