force-app/main/default/objects/Reimbursement_Request__c/fields/Grant_Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Budgeted_Amount__c</fullName>
    <formula>Grant__r.Total_Budgeted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Budgeted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>