force-app/main/default/objects/Reimbursement_Request__c/fields/Grant_Total_Requested_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_Requested_Expenses__c</fullName>
    <formula>Grant__r.Requested_Amount_Submitted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total Requested Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>