force-app/main/default/objects/Reimbursement_Request__c/fields/Grant_Total_Requested_Salary__c.field-meta.xml
<CustomField>
    <fullName>Grant_Total_Requested_Salary__c</fullName>
    <formula>Grant__r.Reimbursement_Requested_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Total Requested Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>