force-app/main/default/objects/Reimbursement_Request__c/fields/Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>Grant_Year__c</fullName>
    <formula>Grant__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Year</label>
    <type>Text</type>
</CustomField>