force-app/main/default/objects/Reimbursement_Request__c/fields/Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Hold_Status__c</fullName>
    <formula>TEXT(Grant__r.Account__r.Hold_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Status</label>
    <type>Text</type>
</CustomField>