force-app/main/default/objects/Reimbursement_Request__c/fields/Indirect_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Rate__c</fullName>
    <label>Indirect Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>