force-app/main/default/objects/Reimbursement_Request__c/fields/Is_National_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_National_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is National Request</label>
    <type>Checkbox</type>
</CustomField>