force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Four_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_Four_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level Four Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel
  >Reimbursement Requests (Level Four Approver)</relationshipLabel>
    <relationshipName>Reimbursement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>