force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Four_Sent_Back_Count__c.field-meta.xml
<CustomField>
    <fullName>Level_Four_Sent_Back_Count__c</fullName>
    <label>Level Four Sent Back Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>