force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Four_Sent_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_Four_Sent_Back_Date__c</fullName>
    <label>Level Four Sent Back Date</label>
    <type>Date</type>
</CustomField>