force-app/main/default/objects/Reimbursement_Request__c/fields/Level_One_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_One_Approved_Date__c</fullName>
    <label>Level One Approved Date</label>
    <type>Date</type>
</CustomField>