force-app/main/default/objects/Reimbursement_Request__c/fields/Level_One_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_One_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Level One Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reimbursement Requests</relationshipLabel>
    <relationshipName>Level_One_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>