force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Three_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_Three_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Level Three Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel
  >Reimbursement Requests (Level Three Approver)</relationshipLabel>
    <relationshipName>Level_Three_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>