force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Three_Sent_Back_Count__c.field-meta.xml
<CustomField>
    <fullName>Level_Three_Sent_Back_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Level Three Sent Back Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>