force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Three_Sent_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Level_Three_Sent_Back_Date__c</fullName>
    <label>Level Three Sent Back Date</label>
    <type>Date</type>
</CustomField>