force-app/main/default/objects/Reimbursement_Request__c/fields/Level_Two_Approver__c.field-meta.xml
<CustomField>
    <fullName>Level_Two_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Level Two Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel
  >Reimbursement Requests (Level Two Approver)</relationshipLabel>
    <relationshipName>Level_Two_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>