force-app/main/default/objects/Reimbursement_Request__c/fields/Modification_History__c.field-meta.xml
<CustomField>
    <fullName>Modification_History__c</fullName>
    <label>Modification History</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>