force-app/main/default/objects/Reimbursement_Request__c/fields/Modification_Last_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Modification_Last_Submitted_Date__c</fullName>
    <label>Modification Last Submitted Date</label>
    <type>Date</type>
</CustomField>