force-app/main/default/objects/Reimbursement_Request__c/fields/National_Grant_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Id__c</fullName>
    <formula>CASESAFEID(Grant__r.National_Grant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Grant Id</label>
    <type>Text</type>
</CustomField>