force-app/main/default/objects/Reimbursement_Request__c/fields/National_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>National_Org_Name__c</fullName>
    <formula>Grant__r.National_Grant__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Org Name</label>
    <type>Text</type>
</CustomField>