force-app/main/default/objects/Reimbursement_Request__c/fields/National_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Id__c</fullName>
    <formula>Grant__r.National_Organization_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Organization Id</label>
    <type>Text</type>
</CustomField>