force-app/main/default/objects/Reimbursement_Request__c/fields/Notes_for_National__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_National__c</fullName>
    <label>Notes for National</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>