force-app/main/default/objects/Reimbursement_Request__c/fields/Number_of_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approvals_Required__c</fullName>
    <formula
  >Grant__r.National_Grant__r.Number_Reimbursement_Approvals_Required__c</formula>
    <label># of Approvals Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>