force-app/main/default/objects/Reimbursement_Request__c/fields/Number_of_Pay_Periods__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pay_Periods__c</fullName>
    <label>Number of Pay Periods</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>