force-app/main/default/objects/Reimbursement_Request__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>Grant__r.Account__r.Name</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>