force-app/main/default/objects/Reimbursement_Request__c/fields/Prevent_Skip_Reimbursement_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Skip_Reimbursement_Approvals__c</fullName>
    <formula
  >OR(Grant__r.Prevent_Skip_Reimbursement_Approvals__c,  Grant__r.National_Grant__r.Prevent_Skip_Reimbursement_Approvals__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prevent Skip Reimbursement Approvals</label>
    <type>Checkbox</type>
</CustomField>