force-app/main/default/objects/Reimbursement_Request__c/fields/Primary_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Email__c</fullName>
    <label>Primary Approver Email</label>
    <type>Email</type>
</CustomField>