force-app/main/default/objects/Reimbursement_Request__c/fields/Primary_Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Id__c</fullName>
    <formula>CASESAFEID(Grant__r.Account__r.Primary_Approver__c)</formula>
    <label>Primary Approver Id</label>
    <type>Text</type>
</CustomField>