force-app/main/default/objects/Reimbursement_Request__c/fields/Primary_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Name__c</fullName>
    <formula
  >Grant__r.Account__r.Primary_Approver__r.FirstName + &apos; &apos; +  Grant__r.Account__r.Primary_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver Name</label>
    <type>Text</type>
</CustomField>