force-app/main/default/objects/Reimbursement_Request__c/fields/Primary_Approver_On_Leave__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_On_Leave__c</fullName>
    <formula>Grant__r.Account__r.Primary_Approver_On_Leave__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver On Leave</label>
    <type>Checkbox</type>
</CustomField>