force-app/main/default/objects/Reimbursement_Request__c/fields/Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Request_Notes__c</fullName>
    <label>Request Notes</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>