force-app/main/default/objects/Reimbursement_Request__c/fields/Requested_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Requested_Benefits__c</fullName>
    <inlineHelpText
  >Roll-Up Summary for Reimbursement Items: Requested Benefits</inlineHelpText>
    <label>Requested Benefits</label>
    <summarizedField
  >Reimbursement_Item__c.Requested_Benefits__c</summarizedField>
    <summaryForeignKey
  >Reimbursement_Item__c.Reimbursement_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>