force-app/main/default/objects/Reimbursement_Request__c/fields/Requested_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Requested_Expenses__c</fullName>
    <inlineHelpText
  >Roll-Up Summary for Reimbursement Items: Requested Amount where Record Type = Expense</inlineHelpText>
    <label>Requested Expenses</label>
    <summarizedField>Reimbursement_Item__c.Requested_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reimbursement_Item__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryForeignKey
  >Reimbursement_Item__c.Reimbursement_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>