force-app/main/default/objects/Reimbursement_Request__c/fields/Requested_Indirect_Costs__c.field-meta.xml
<CustomField>
    <fullName>Requested_Indirect_Costs__c</fullName>
    <label>Requested Indirect Costs</label>
    <summarizedField
  >Reimbursement_Item__c.Indirect_Rate_Amount__c</summarizedField>
    <summaryForeignKey
  >Reimbursement_Item__c.Reimbursement_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>