force-app/main/default/objects/Reimbursement_Request__c/fields/Requested_Salary__c.field-meta.xml
<CustomField>
    <fullName>Requested_Salary__c</fullName>
    <inlineHelpText
  >Roll-Up Summary for Reimbursement Items: Requested Salary</inlineHelpText>
    <label>Requested Salary</label>
    <summarizedField>Reimbursement_Item__c.Requested_Salary__c</summarizedField>
    <summaryForeignKey
  >Reimbursement_Item__c.Reimbursement_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>