force-app/main/default/objects/Reimbursement_Request__c/fields/Salary_Balance__c.field-meta.xml
<CustomField>
    <fullName>Salary_Balance__c</fullName>
    <formula>Grant__r.Salary_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Grant: Salary Balance</inlineHelpText>
    <label>Salary Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>