force-app/main/default/objects/Reimbursement_Request__c/fields/Secondary_Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver_Id__c</fullName>
    <formula>CASESAFEID( Grant__r.Account__r.Secondary_Approver__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Approver Id</label>
    <type>Text</type>
</CustomField>