force-app/main/default/objects/Reimbursement_Request__c/fields/Secondary_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver_Name__c</fullName>
    <formula>Grant__r.Account__r.Secondary_Approver_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Approver Name</label>
    <type>Text</type>
</CustomField>