force-app/main/default/objects/Reimbursement_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Revisions Needed</fullName>
            </value>
            <value>
                <fullName>Revision in Progress</fullName>
            </value>
            <value>
                <fullName>Pending First Approval</fullName>
            </value>
            <value>
                <fullName>Pending Second Approval</fullName>
            </value>
            <value>
                <fullName>Pending Third Approval</fullName>
            </value>
            <value>
                <fullName>Pending Fourth Approval</fullName>
            </value>
            <value>
                <fullName>Pending Final Approval</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>