force-app/main/default/objects/Reimbursement_Request__c/fields/Total_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Amount__c</fullName>
    <formula>Approved_Salary__c + Approved_Benefits__c + Approved_Expenses__c + 
IF(AND( 
NOT(ISPICKVAL(Status__c, &apos;Incomplete&apos;)), 
NOT(ISPICKVAL(Status__c, &apos;Revisions Needed&apos;)), 
NOT(ISPICKVAL(Status__c, &apos;Revisions in Progress&apos;)), 
NOT(ISPICKVAL(Status__c, &apos;Denied&apos;)),
NOT(ISPICKVAL(Status__c, &apos;Pending First Approval&apos;))
), 
Indirect_Rate_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Approved_Salary__c + Approved_Benefits__c + Approved_Expenses__c + 
IF([Status__c not any Incomplete], Indirect_Rate_Amount__c, 0)</inlineHelpText>
    <label>Total Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>