force-app/main/default/objects/Reimbursement_Request__c/fields/Total_FTE_at_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Total_FTE_at_Affiliate__c</fullName>
    <label>Total FTE at Affiliate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>