force-app/main/default/objects/Reimbursement_Request__c/fields/Total_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested__c</fullName>
    <formula
  >Requested_Salary__c + Requested_Benefits__c + Requested_Expenses__c + Indirect_Rate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Requested_Salary__c + Requested_Benefits__c + Requested_Expenses__c + Indirect_Rate_Amount__c</inlineHelpText>
    <label>Total Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>