force-app/main/default/objects/Reimbursement_Request__c/fields/Total_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested_Amount__c</fullName>
    <formula
  >Requested_Amount__c + IF(ISPICKVAL(Grant__r.Use_Indirect_Rate__c, &apos;Yes&apos;), IF( Grant__r.National_Grant_Type__c == &apos;OVC&apos;, Requested_Indirect_Costs__c, Indirect_Rate_Amount__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Requested_Amount__c + IF(ISPICKVAL(Grant__r.Use_Indirect_Rate__c, &apos;Yes&apos;), Indirect_Rate_Amount__c, 0)</inlineHelpText>
    <label>Requested + Indirect Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>