force-app/main/default/objects/Reimbursement_Request__c/fields/updated__c.field-meta.xml
<CustomField>
    <fullName>updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>updated</label>
    <type>Checkbox</type>
</CustomField>