force-app/main/default/objects/Reimbursement_Request__c/fields/Use_Indirect_Rate__c.field-meta.xml
<CustomField>
    <fullName>Use_Indirect_Rate__c</fullName>
    <formula
  >IF(ISPICKVAL(Grant__r.Use_Indirect_Rate__c, &apos;Yes&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Indirect Rate</label>
    <type>Checkbox</type>
</CustomField>