force-app/main/default/objects/Reimbursement_Request__c/fields/Youth_Served_Percent__c.field-meta.xml
<CustomField>
    <fullName>Youth_Served_Percent__c</fullName>
    <label>Youth Served Percent</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>