force-app/main/default/objects/Reimbursement_Request__c/fields/Youth_Served_with_Grant_Funding__c.field-meta.xml
<CustomField>
    <fullName>Youth_Served_with_Grant_Funding__c</fullName>
    <label>Youth Served with Grant Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>