force-app/main/default/objects/Reimbursement_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Grant__c</columns>
    <columns>Status__c</columns>
    <columns>Approved_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>